--- a/templates/index.html
+++ b/templates/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="../static/img/favicon.png" rel="icon">
+  <link href="../static/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -19,16 +19,16 @@
     rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="../static/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../static/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="../static/vendor/icofont/icofont.min.css" rel="stylesheet">
+  <link href="../static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="../static/vendor/venobox/venobox.css" rel="stylesheet">
+  <link href="../static/vendor/owl.carousel/../static/owl.carousel.min.css" rel="stylesheet">
+  <link href="../static/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
+  <link href="../static/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   * Template Name: Moderna - v2.0.0
@@ -47,8 +47,8 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>Imagineer</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-         <a href="index.html"><img src="assets/img/imagineer_logo1.png" class="img-fluid"></a>
-         <!-- <a href="index.html"><img src="assets/img/text.png" alt="" class="img-fluid"></a> -->
+         <a href="index.html"><img src="../static/img/imagineer_logo1.png" class="img-fluid"></a>
+         <!-- <a href="index.html"><img src="../static/img/text.png" alt="" class="img-fluid"></a> -->
       </div>
 
       <nav class="nav-menu float-right d-none d-lg-block">
@@ -86,7 +86,7 @@
 
           <!-- <a href="" class="btn-get-started animated fadeInUp"></a> -->
 
-          <h2 class="animated fadeInDown"><img src="assets/img/text.png" class="img-fluid"><br><span>Dream.<br>Design.<br>Develop.</span></h2>
+          <h2 class="animated fadeInDown"><img src="../static/img/text.png" class="img-fluid"><br><span>Dream.<br>Design.<br>Develop.</span></h2>
           <p class="animated fadeInUp">A mega collab hackathon hosted by ACM NITK and ISTE NITK</p>
           <a href="https://forms.gle/s1FhiKdujQXJbBpE8" class="btn-get-started animated fadeInUp">REGISTER</a>
 
@@ -197,7 +197,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 pt-4">
-            <img src="assets/img/picture1.jpg" class="img-fluid" alt="">
+            <img src="../static/img/picture1.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-4">
             <h3> What is Imagineer?</h3>
@@ -213,7 +213,7 @@
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2 pt-5">
-            <img src="assets/img/throwback.jpg" class="img-fluid" alt="">
+            <img src="../static/img/throwback.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Imagineer '19 Throwback</h3>
@@ -241,7 +241,7 @@ then evaluated by a panel of seasoned judges.
 
         <div class="row" data-aos="fade-up">
           <div class="col-md-5 pt-5">
-            <img src="assets/img/test.jpg" class="img-fluid" alt="">
+            <img src="../static/img/test.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5">
             <h3>Testimonials from Previous winners</h3><br>
@@ -351,7 +351,7 @@ IMAGINEER’19 WINNER</p>
     <!-- /Event Schedule -->
         <!-- <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
-            <img src="assets/img/rules.jpg" class="img-fluid" alt="">
+            <img src="../static/img/rules.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-7 pt-5 order-2 order-md-1">
             <h3>Rules to Follow</h3>
@@ -396,7 +396,7 @@ IMAGINEER’19 WINNER</p>
 
         <div class="row">
           <div class="col-lg-6 video-box">
-            <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
+            <img src="../static/img/why-us.jpg" class="img-fluid" alt="">
             <a href="https://youtu.be/JKphE5HfmM8" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
@@ -443,7 +443,7 @@ IMAGINEER’19 WINNER</p>
 
           </div>
           <!-- <div class="col-lg-3 col-md-6 footer-links">
-            <img src="assets/img/acmLogo.jpg" class="img-fluid"> -->
+            <img src="../static/img/acmLogo.jpg" class="img-fluid"> -->
             <!-- <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -488,19 +488,19 @@ IMAGINEER’19 WINNER</p>
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="assets/vendor/jquery/jquery.min.js"></script>
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
-  <script src="assets/vendor/venobox/venobox.min.js"></script>
-  <script src="assets/vendor/waypoints/jquery.waypoints.min.js"></script>
-  <script src="assets/vendor/counterup/counterup.min.js"></script>
-  <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
-  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="../static/vendor/jquery/jquery.min.js"></script>
+  <script src="../static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="../static/vendor/jquery.easing/jquery.easing.min.js"></script>
+  <script src="../static/vendor/php-email-form/validate.js"></script>
+  <script src="../static/vendor/venobox/venobox.min.js"></script>
+  <script src="../static/vendor/waypoints/jquery.waypoints.min.js"></script>
+  <script src="../static/vendor/counterup/counterup.min.js"></script>
+  <script src="../static/vendor/owl.carousel/owl.carousel.min.js"></script>
+  <script src="../static/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="../static/vendor/aos/aos.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="assets/js/main.js"></script>
+  <script src="../static/js/main.js"></script>
 
 </body>
 
