Removed useless image

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,6 @@
 
   <!-- Favicons -->
   <link href="../static/img/favicon.png" rel="icon">
-  <link href="../static/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
@@ -24,7 +23,7 @@
   <link href="../static/vendor/icofont/icofont.min.css" rel="stylesheet">
   <link href="../static/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="../static/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="../static/vendor/owl.carousel/../static/owl.carousel.min.css" rel="stylesheet">
+  <link href="../static/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
   <link href="../static/vendor/aos/aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
@@ -47,7 +46,7 @@
       <div class="logo float-left">
         <!-- <h1 class="text-light"><a href="index.html"><span>Imagineer</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-         <a href="index.html"><img src="../static/img/imagineer_logo1.png" class="img-fluid"></a>
+         <a href="#"><img src="../static/img/imagineer_logo1.png" class="img-fluid"></a>
          <!-- <a href="index.html"><img src="../static/img/text.png" alt="" class="img-fluid"></a> -->
       </div>
 
@@ -56,20 +55,7 @@
           <li class="active"><a href="#hero">Home</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#timeline">Timeline</a></li>
-         <!-- <li><a href="#rules">Rules</a></li> -->
-<!--           <li><a href="#problems">Problem Statements</a></li>
- -->          <li><a href="#contact">Contact</a></li>
-          <!-- <li class="drop-down"><a href="">Drop Down</a>
-
-          <li><a href="about.html">About Us</a></li>
-          <li><a href="services.html">Services</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="team.html">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
-
-            </ul>
-          <li><a href="contact.html">Contact Us</a></li> -->
+          <li><a href="#contact">Contact</a></li>
       </nav><!-- .nav-menu -->
 
     </div>
