--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,8 @@
           <li class="active"><a href="#hero">Home</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#timeline">Timeline</a></li>
+          <li><a href="#problems">Problem Statements</a></li>
+          <li><a href="#rules">Rules</a></li>
           <li><a href="#contact">Contact</a></li>
       </nav><!-- .nav-menu -->
 
@@ -162,10 +164,8 @@
 
             <div class="icon-box">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">OPEN MEET</a></h4>
-              <p class="description">Intrigued to know the theme? Wondering what kind of problems we have for you this time? Attend the open
-                meet for imagineer on <b>25 Feb 2020</b>  where we'll be explaining the rules and problem statements in detail.
-                We'll see you at the <b>MSH</b> at <b>6PM</b>!</p>
+              <h4 class="title"><a href="">THEME REVEALED!!</a></h4>
+              <p class="description">We are proud to present this year's theme for imagineer as <b>"Coastal Conundrums"</b>!! Check out the <a href="#rules">rules</a> and the <a href="#problems">problems statements</a> to know more!!</p>
             </div>
 
           </div>
@@ -189,7 +189,7 @@
             <h3> What is Imagineer?</h3>
             <p class="font-italic">Imagineer is a Makeathon organized with the intent of bringing together
               students from
-              various walks of life to collaborate, ideate and solve problems omnipresent at NITK, by
+              various walks of life to collaborate, ideate and solvereal life problems, by
               developing effective and innovative prototypes. The vision of the event is to create an
               incentivised culture of innovation in our college in order to give rise to the next
               generation of innovators.</p>
@@ -294,6 +294,19 @@ IMAGINEER’19 WINNER</p>
               <div class="event">
                 <div class="event-day">
                   <div>
+                    <span class="day">5</span>
+                    <span class="year">Mar, 2020</span>
+                  </div>
+                </div>
+                <div class="event-content">
+                  <br>
+                  <h3 class="event-title">Workshops</p>
+                </div>
+              </div>
+
+              <div class="event">
+                <div class="event-day">
+                  <div>
                     <span class="day">7</span>
                     <span class="year">Mar, 2020</span>
                   </div>
@@ -335,6 +348,105 @@ IMAGINEER’19 WINNER</p>
 </div>
 </section>
     <!-- /Event Schedule -->
+
+    <section  id="problems" class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+      <center><h2 class="title"><span>Problem</span> <span style="color: #68A4C4;">Statements</span></h2></center>
+
+      <div class="container" >
+
+        <div class="row">
+          <div class="col-lg-12 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
+              <h4 class="title">1. Energy Harvesting</h4>
+              <ul class="description font-italic">
+                <li>Tapping renewable energy sources</li>
+                <li>Overcoming power shortage</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 d-flex flex-column justify-content-center p-5">
+            <div class="icon-box">
+              <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
+              <h4 class="title">2. Monitoring the coast for enemy infiltration</h4>
+              <ul class="description font-italic">
+                <li>Detection and alert system</li>
+                <li>Virtual Coast guard</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 d-flex flex-column justify-content-center p-5">
+            <div class="icon-box">
+              <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
+              <h4 class="title">3. Smart ship to shore communication</h4>
+              <ul class="description font-italic">
+                <li>Radio communication for ships at sea</li>
+                <li>Add the 'smart' factor</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 d-flex flex-column justify-content-center p-5">
+            <div class="icon-box">
+              <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
+              <h4 class="title">4. Beach cleaning system</h4>
+              <ul class="description font-italic">
+                <li>Solution to reduce or prevent beach trash</li>
+                <li>Maybe something autonomous or maybe not</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 d-flex flex-column justify-content-center p-5">
+            <div class="icon-box">
+              <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
+              <h4 class="title">5. Drowning in the sea</h4>
+              <ul class="description font-italic">
+                <li>Technical solution to prevent drowning</li>
+                <li>Crossing boundaries</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 d-flex flex-column justify-content-center p-5">
+            <div class="icon-box">
+              <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
+              <h4 class="title">6. Improving the lives of fishermen</h4>
+              <ul class="description font-italic">
+                <li>Make demand-supply better</li>
+                <li>Prevent capsizing of boats</li>
+                <li>Minimal communication equipment for fishermen lost at sea</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
         <!-- <div class="row" data-aos="fade-up">
           <div class="col-md-5 order-1 order-md-2">
             <img src="../static/img/rules.jpg" class="img-fluid" alt="">
@@ -355,7 +467,57 @@ IMAGINEER’19 WINNER</p>
           </div>
         </div> -->
 
-      </div>
+        <section class="features" id="rules" data-aos="fade-up" date-aos-delay="200">
+          <div class="container">
+    <center><h2 class="title" data-aos="fade-up"><span>Rul</span><span style="color: #68A4C4;">es</span></h2></center><br>
+
+
+            <div class="row" data-aos="fade-up">
+              <!-- <div class="col-md-5 pt-4">
+                <img src="../static/img/picture1.jpg" class="img-fluid" alt="">
+              </div> -->
+              <div class="col-md-14 pt-4">
+                <ol class="breadcrumbs">
+                  <li>Each team will work on the problem statement they chose during the brainstorming session.</li>
+                  <li>During the brainstorming session, you’ll discuss ideas with people who are working on the
+                    same problem statements and form teams (of 5 or 6) with people who have similar ideas. After forming the
+                     teams, you will finalize the idea and formulate a list of components that you might be requiring.
+                     A mentor will be assigned to your group based on the field you are working on, who will guide you through the process.</li>
+                  <li>Your project idea will be scrutinized during the next phase and approved based on a feasibility
+                     study by the mentor team.</li>
+                  <li>All components will need to be purchased based on the list approved by the project mentors.
+                     The components purchased should be within Rs.2500 (per team). Therefore, choose your components carefully</li>
+                  <li>Workshops covering essential topics in circuit and non-circuit streams will be held on 5th March. The topics involved may or may not be pertinent to your solution.</li>
+                  <li>You’ll have to develop a prototype with basic functionality to prove the concept you have suggested.</li>
+                </ol>
+              </div>
+            </div>
+          </div>
+        </section>
+      <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
+        <div class="container">
+
+          <div class="row">
+            <div class="col-lg-6 video-box">
+              <img src="../static/img/why-us.jpg" class="img-fluid" alt="">
+              <a href="https://youtu.be/JKphE5HfmM8" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            </div>
+
+            <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
+
+              <div class="icon-box">
+                <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
+                <h4 class="title"><a href="">Here's a Throwback to Imagineer 2019 edition!!</a></h4>
+                <p class="description"><a href="https://youtu.be/JKphE5HfmM8" class="venobox mb-4" data-vbtype="video" data-autoplay="true"></a></p>
+              </div>
+
+            </div>
+          </div>
+
+        </div>
+      </section>
+
+
 
 
   <!-- ======= Footer ======= -->
@@ -377,28 +539,7 @@ IMAGINEER’19 WINNER</p>
       </div>
     </div> -->
     <!-- ======= Why Us Section ======= -->
-    <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-lg-6 video-box">
-            <img src="../static/img/why-us.jpg" class="img-fluid" alt="">
-            <a href="https://youtu.be/JKphE5HfmM8" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
-          </div>
-
-          <div class="col-lg-6 d-flex flex-column justify-content-center p-5">
-
-            <div class="icon-box">
-              <!-- <div class="icon"><i class="bx bx-fingerprint"></i></div> -->
-              <h4 class="title"><a href="">Here's a Throwback to Imagineer 2019 edition!!</a></h4>
-              <p class="description"><a href="https://youtu.be/JKphE5HfmM8" class="venobox mb-4" data-vbtype="video" data-autoplay="true"></a></p>
-            </div>
-
-          </div>
-        </div>
-
-      </div>
-    </section><!-- End Why Us Section -->
+  <!-- End Why Us Section -->
     <div class="footer-top">
       <div class="container">
         <div class="row">
@@ -414,7 +555,7 @@ IMAGINEER’19 WINNER</p>
             </ul>
           </div> -->
 
-          
+
 
           <div id="contact" class="col-lg-3 col-md-6 footer-contact">
             <h4>Contact Us</h4>
@@ -425,9 +566,10 @@ IMAGINEER’19 WINNER</p>
               Aditya Rastogi <br>
               <strong>Phone:</strong> +91 9886517191<br><br>
               <strong>Email:</strong> imagineer@nitk.edu.in<br>
+              <!-- Check out our <strong><a href="https://instagram.com/imagineernitk?igshid=razpvq6e0bl">instagram</a></strong> for more details!<br> -->
             </p>
 
-          </div>
+          <!-- </div> -->
           <!-- <div class="col-lg-3 col-md-6 footer-links">
             <img src="../static/img/acmLogo.jpg" class="img-fluid"> -->
             <!-- <h4>Our Services</h4>
@@ -442,25 +584,21 @@ IMAGINEER’19 WINNER</p>
 
           <!-- <div class="col-lg-3 col-md-6 footer-info"> -->
 
-            
+
             <!-- <h3>About Moderna</h3>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p> -->
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-            </div> -->
-          <!-- </div> -->
+              <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+              <a href="https://www.facebook.com/imagineernitk" class="facebook"><i class="bx bxl-facebook"></i></a>
+              <a href=" https://instagram.com/imagineernitk?igshid=razpvq6e0bl" class="instagram"><i class="bx bxl-instagram"></i></a>
+              <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a><br> -->
+            </div>
+          </div>
 
         </div>
-      </div>
-    </div>
+      <!-- </div>
+    </div> -->
 
-    <!-- <div class="container">
-      <div class="copyright">
-        &copy; Copyright <strong><span>Moderna</span></strong>. All Rights Reserved
-      </div> -->
     <div class="credits">
       <!-- All the links in the footer should remain intact. -->
       <!-- You can delete the links only if you purchased the pro version. -->
