Made imagineer logo bigger

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="../static/img/favicon.png" rel="icon">
+  <link href="../static/favicon.ico" rel="icon">
 
   <!-- Google Fonts -->
   <link
@@ -43,10 +43,10 @@
   <header id="header" class="fixed-top header-transparent">
     <div class="container">
 
-      <div class="logo float-left">
+      <div class="logo float-left" >
         <!-- <h1 class="text-light"><a href="index.html"><span>Imagineer</span></a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
-         <a href="#"><img src="../static/img/imagineer_logo1.png" class="img-fluid"></a>
+         <a href="#"><img src="../static/img/imagineer_logo1.png" ></a>
          <!-- <a href="index.html"><img src="../static/img/text.png" alt="" class="img-fluid"></a> -->
       </div>
 
@@ -469,7 +469,7 @@ IMAGINEER’19 WINNER</p>
 
         <section class="features" id="rules" data-aos="fade-up" date-aos-delay="200">
           <div class="container">
-    <center><h2 class="title" data-aos="fade-up"><span>Rul</span><span style="color: #68A4C4;">es</span></h2></center><br>
+    <center><h2 class="title" data-aos="fade-up"><span>Rules</span><span style="color: #68A4C4;"> To Follow</span></h2></center><br>
 
 
             <div class="row" data-aos="fade-up">
@@ -604,8 +604,7 @@ IMAGINEER’19 WINNER</p>
       <!-- You can delete the links only if you purchased the pro version. -->
       <!-- Licensing information: https://bootstrapmade.com/license/ -->
       <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-template-corporate-moderna/ -->
-      Designed by Imagineer Website Team
-    </div>
+      Made by Imagineer Website Team. Template by <a href="https://bootstrapmade.com/">BootstrapMade</a>
     </div>
   </footer><!-- End Footer -->
 
