Made rules responsive

--- a/templates/index.html
+++ b/templates/index.html
@@ -471,27 +471,33 @@ IMAGINEER’19 WINNER</p>
           <div class="container">
     <center><h2 class="title" data-aos="fade-up"><span>Rules</span><span style="color: #68A4C4;"> To Follow</span></h2></center><br>
 
-
+            <div class="container" style="padding: 2%;">
             <div class="row" data-aos="fade-up">
               <!-- <div class="col-md-5 pt-4">
                 <img src="../static/img/picture1.jpg" class="img-fluid" alt="">
               </div> -->
-              <div class="col-md-14 pt-4">
-                <ol class="breadcrumbs">
-                  <li>Each team will work on the problem statement they chose during the brainstorming session.</li>
+              <div class="col-md-12">
+                <ol>
+                  <li> Each team will work on the problem statement they chose during the brainstorming session.</li>
+                  <br>
                   <li>During the brainstorming session, you’ll discuss ideas with people who are working on the
                     same problem statements and form teams (of 5 or 6) with people who have similar ideas. After forming the
                      teams, you will finalize the idea and formulate a list of components that you might be requiring.
                      A mentor will be assigned to your group based on the field you are working on, who will guide you through the process.</li>
+                     <br>
                   <li>Your project idea will be scrutinized during the next phase and approved based on a feasibility
                      study by the mentor team.</li>
+                     <br>
                   <li>All components will need to be purchased based on the list approved by the project mentors.
                      The components purchased should be within Rs.2500 (per team). Therefore, choose your components carefully</li>
+                     <br>
                   <li>Workshops covering essential topics in circuit and non-circuit streams will be held on 5th March. The topics involved may or may not be pertinent to your solution.</li>
+                  <br>
                   <li>You’ll have to develop a prototype with basic functionality to prove the concept you have suggested.</li>
                 </ol>
               </div>
             </div>
+          </div>
           </div>
         </section>
       <section class="why-us section-bg" data-aos="fade-up" date-aos-delay="200">
