--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
           <!-- <a href="" class="btn-get-started animated fadeInUp"></a> -->
 
           <h2 class="animated fadeInDown"><img src="../static/img/text.png" class="img-fluid"><br><span>Dream.<br>Design.<br>Develop.</span></h2>
-          <p class="animated fadeInUp">A mega collab hackathon hosted by ACM NITK and ISTE NITK</p>
+          <p class="animated fadeInUp">A mega collab makeathon hosted by ACM NITK and ISTE NITK</p>
           <a href="https://forms.gle/s1FhiKdujQXJbBpE8" class="btn-get-started animated fadeInUp">REGISTER</a>
 
         </div>
