Team building session

--- a/templates/index.html
+++ b/templates/index.html
@@ -172,6 +172,22 @@
         </div>
 
       </div>
+      <div class="container">
+
+        <div class="row">
+          <div class="col-lg-12 d-flex flex-column justify-content-center p-5">
+
+            <div class="icon-box">
+              <div class="icon"><i class="bx bx-fingerprint"></i></div>
+              <h4 class="title"><a href="">TEAM BUILDING SESSION</a></h4>
+              <p class="description">Make sure to <a href="#hero"><b>REGISTER</b></a> and attend the team building session. The teams made during this session will be final! See you there on the <b>4th of March, 6pm at the Main Seminar Hall(Main Building).</b></p>
+            </div>
+
+          </div>
+        </div>
+
+      </div>
+
     </section>
 
 
